# multi-agent-ai-realtor

./: .env.example  .gitignore  README.md  langgraph.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.windsurf/rules/: langgraph.md
.windsurf/workflows/: run.md
scripts/: update_image_urls.py
src/: graph.py  main.py  standard_state.py
src/agents/appointment_booking/: appointment_booking_agent.py
src/agents/appointment_booking/tools/: find_available_slots.py  schedule_viewing.py
src/agents/calendar_manager/: calendar_manager.py
src/agents/calendar_manager/tools/: find_available_slots.py  schedule_viewing.py
src/agents/property_finder/: property_finder.py  property_finder_agent.py
src/agents/property_finder/parse_query/: parse_query_node.py
src/agents/property_finder/query_supabase/: property.py  query_supabase_node.py
src/agents/supervisor/: app_state.py  supervisor.py  user_profile.py
src/agents/supervisor/tools/: render_property_carousel.py
src/frontend/: button.tsx  carousel.tsx  package-lock.json  tailwind.config.js  ui.tsx
src/real_estate_ai/: main.py  real_estate_agent.py  standard_state.py  user_profile.py
src/real_estate_ai/agents/: property_inquiry_agent.py
src/real_estate_ai/db/: client.py
src/real_estate_ai/frontend/: output.css  package-lock.json  package.json  ui.css  ui.tsx
src/real_estate_ai/models/: __init__.py
src/real_estate_ai/tools/: __init__.py  parse_property_search_query.py  search_properties.py
src/real_estate_ai/utils/: google_calendar.py  supabase.py
src/tools/: create_property_ui.py
src/utils/: google_calendar.py  llm_config.py  supabase.py
tests/: README.md  conftest.py
tests/integration/: test_calendar_flow_integration.py  test_property_search_flow_integration.py  test_render_carousel_integration.py
tests/unit/: test_find_available_slots.py  test_parse_property_search_query.py  test_render_property_carousel.py  test_schedule_viewing.py  test_search_properties.py
(+15 files in other folders)
